# rs-NameExchanger

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  default.aproj  main.aardio  manifest.xml  raw_icon_data  res.rc  version.h
.github/: copilot-instructions.md
lib/: exchange.rs  file_rename.rs  lib.rs  mod.rs  msgbox.rs  path_checkout.rs  types.rs
lib/exchange_lib/: exchange.rs  file_rename.rs  mod.rs  path_checkout.rs
res/: build.ps1  resources.res  version.rc
src/: main.rs  test_font.rs
ui/: app-window.slint  msgbox.slint
