[package]
name    = "rs-NaneExchanger"
version = "1.0.0"
edition = "2021"

[lib]
name = "libs"
path = "lib/mod.rs"


[[bin]]
name = "NameExchanger"
path = "src/main.rs"

[dependencies]
slint = "1.14.1"

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
lto       = true
opt-level = "z"
strip     = true
