[package]
name = "rs-NaneExchanger"
version = "1.0.0"
edition = "2021"

[lib]
name = "name_exchanger_lib"
path = "lib/lib.rs"

[[bin]]
name = "NameExchanger"
path = "src/main.rs"

[build-dependencies]
winres = "0.1.12"

[dependencies]
native-windows-gui = "1.0.13"
winapi = { version = "0.3.9", features = ["winuser", "shellapi", "windef", "minwindef"] }

[profile.release]
lto = true
opt-level = "z"
strip = true
